--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,5 +28,14 @@
             },
             "presentation": {"echo": true, "reveal": "always", "focus": false, "panel": "shared", "showReuseMessage": false, "clear": true},
         },
+        {
+            "label": "flutter devices",
+            "type": "shell",
+            "command": "flutter devices",
+            "options": {
+                "cwd": "${workspaceFolder}/gml_app/"
+            },
+            "presentation": {"echo": true, "reveal": "always", "focus": false, "panel": "shared", "showReuseMessage": false, "clear": true},
+        },
     ]
 }
